--- a/packages/ui/src/components/JobCard/JobCard.module.css
+++ b/packages/ui/src/components/JobCard/JobCard.module.css
@@ -58,6 +58,7 @@
   display: flex;
   margin-top: 1rem;
   width: 100%;
+  overflow: hidden;
 }
 
 .sideInfo {
